# ml-py-package-template

./: .gitignore  Makefile  README.md  cookiecutter.json  main.py  pyproject.toml
.github/workflows/: test-template.yml
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  pyproject.toml
{{cookiecutter.project_slug}}/hooks/: pre-push
{{cookiecutter.project_slug}}/notebooks/: README.md  getting_started.ipynb
{{cookiecutter.project_slug}}/notebooks/examples/: getting_started.ipynb
{{cookiecutter.project_slug}}/tests/: __init__.py  test_main.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: main.py
{{cookiecutter.repo_name}}/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/: __init__.py
