[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }
]
license = { text = "{{ cookiecutter.license }}" }
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest~=7.4.0",
    "ruff~=0.6.0",
    "pyright~=1.1.380",
    "pre-commit~=3.8.0",
]
notebooks = [
    "jupyter~=1.1.0",
    "jupyterlab~=4.2.0",
    "ipykernel~=6.29.0",
    "matplotlib~=3.9.0",
    "seaborn~=0.13.0",
    "plotly~=5.24.0",
    "nbformat~=5.10.0",
]
all = [
    # Development dependencies
    "pytest~=7.4.0",
    "ruff~=0.6.0",
    "pyright~=1.1.380",
    "pre-commit~=3.8.0",
    # Notebook dependencies
    "jupyter~=1.1.0",
    "jupyterlab~=4.2.0",
    "ipykernel~=6.29.0",
    "matplotlib~=3.9.0",
    "seaborn~=0.13.0",
    "plotly~=5.24.0",
    "nbformat~=5.10.0",
]

[build-system]
requires = ["setuptools~=75.0", "wheel~=0.44.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["{{ cookiecutter.package_name }}*"]
exclude = ["tests*", "notebooks*"]

[tool.ruff]
line-length = 120
target-version = "py{{ cookiecutter.python_version.replace('.', '') }}"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
pythonVersion = "{{ cookiecutter.python_version }}"
include = ["{{ cookiecutter.package_name }}"]
exclude = ["**/node_modules", "**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = false
