[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }
]
license = { text = "{{ cookiecutter.license }}" }
dependencies = []

[dependency-groups]
all = [
    {include-group = "dev"},
    {include-group = "notebooks"},
]

dev = [
    "pytest~=7.4.0",
    "ruff~=0.6.0",
    "pyright~=1.1.403",
    "pre-commit~=3.8.0"
]

notebooks = [
    "jupyterlab~=4.2.0",
    "matplotlib~=3.9.0"
]


[build-system]
requires = ["setuptools~=75.0", "wheel~=0.44.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["{{ cookiecutter.package_name }}*"]
exclude = ["tests*", "notebooks*"]

[tool.ruff]
line-length = 120


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
include = ["{{ cookiecutter.package_name }}"]
exclude = ["**/node_modules", "**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = false
